test/Sema/block-labels.c
begin_unit|revision:0.9.5;language:C;cregit-version:0.0.1
begin_comment
comment|// RUN: %clang_cc1 %s -verify -fblocks -fsyntax-only
end_comment

begin_function
name|int
name|a
parameter_list|()
block|{
name|A
label|:
if|if
condition|(
literal|1
condition|)
name|xx
argument_list|()
expr_stmt|;
return|return
lambda|^
block|{
name|A
label|:
return|return
literal|1
return|;
block|}
argument_list|()
return|;
block|}
end_function

begin_function
name|int
name|b
parameter_list|()
block|{
name|A
label|:
return|return
lambda|^
block|{
name|int
name|a
decl_stmt|;
name|A
label|:
return|return
literal|1
return|;
block|}
argument_list|()
return|;
block|}
end_function

begin_function
name|int
name|d
parameter_list|()
block|{
name|A
label|:
return|return
lambda|^
block|{
name|int
name|a
decl_stmt|;
name|A
label|:
name|a
operator|=
lambda|^
block|{
name|int
name|a
decl_stmt|;
name|A
label|:
return|return
literal|1
return|;
block|}
argument_list|()
operator|+
lambda|^
block|{
name|int
name|b
decl_stmt|;
name|A
label|:
return|return
literal|2
return|;
block|}
argument_list|()
expr_stmt|;
return|return
name|a
return|;
block|}
argument_list|()
return|;
block|}
end_function

begin_function
name|int
name|c
parameter_list|()
block|{
goto|goto
name|A
goto|;
return|return
lambda|^
block|{
name|A
label|:
return|return
literal|1
return|;
block|}
argument_list|()
return|;
comment|// expected-error {{use of undeclared label 'A'}}
block|}
end_function

end_unit

